src/test/deca/syntax/valid/resultats/test4_comments-synt.res
`> [16, 0] Program
   +> ListDeclClass [List with 0 elements]
   `> [16, 0] Main
      +> ListDeclVar [List with 0 elements]
      `> ListInst [List with 15 elements]
         []> [18, 1] Println
         ||  `> [18, 9] ListExpr [List with 1 elements]
         ||     []> [18, 9] StringLiteral (comment 1)
         []> [21, 1] Println
         ||  `> [21, 9] ListExpr [List with 1 elements]
         ||     []> [21, 9] StringLiteral (comment 2)
         []> [24, 1] Println
         ||  `> [24, 9] ListExpr [List with 1 elements]
         ||     []> [24, 9] StringLiteral (comment 3)
         []> [27, 1] Println
         ||  `> [27, 9] ListExpr [List with 1 elements]
         ||     []> [27, 9] StringLiteral (comment 4)
         []> [30, 1] Println
         ||  `> [30, 9] ListExpr [List with 1 elements]
         ||     []> [30, 9] StringLiteral (comment 5)
         []> [33, 1] Println
         ||  `> [33, 9] ListExpr [List with 1 elements]
         ||     []> [33, 9] StringLiteral (comment 6)
         []> [36, 1] Println
         ||  `> [36, 9] ListExpr [List with 1 elements]
         ||     []> [36, 9] StringLiteral (comment 7)
         []> [39, 1] Println
         ||  `> [39, 9] ListExpr [List with 1 elements]
         ||     []> [39, 9] StringLiteral (comment 8)
         []> [42, 1] Println
         ||  `> [42, 9] ListExpr [List with 1 elements]
         ||     []> [42, 9] StringLiteral (comment 9)
         []> [45, 1] Println
         ||  `> [45, 9] ListExpr [List with 1 elements]
         ||     []> [45, 9] StringLiteral (comment 10)
         []> [48, 1] Println
         ||  `> [48, 9] ListExpr [List with 1 elements]
         ||     []> [48, 9] StringLiteral (comment 11)
         []> [52, 1] Println
         ||  `> [52, 9] ListExpr [List with 1 elements]
         ||     []> [52, 9] StringLiteral (comment 12)
         []> [56, 1] Println
         ||  `> [56, 9] ListExpr [List with 1 elements]
         ||     []> [56, 9] StringLiteral (comment 13)
         []> [61, 1] Println
         ||  `> [61, 9] ListExpr [List with 1 elements]
         ||     []> [61, 9] StringLiteral (comment 14)
         []> [68, 1] Println
             `> [68, 9] ListExpr [List with 1 elements]
                []> [68, 9] StringLiteral (comment 15)
