src/test/deca/syntax/invalid/resultats/test20_instr_bool-lex.res
'{': [@0,314:314='{',<36>,14:0]
IDENT: [@1,317:323='boolean',<26>,15:1]
IDENT: [@2,325:325='b',<26>,15:9]
'=': [@3,327:327='=',<29>,15:11]
'(': [@4,329:329='(',<34>,15:13]
'true': [@5,330:333='true',<24>,15:14]
'!': [@6,335:335='!',<38>,15:19]
'false': [@7,337:341='false',<10>,15:21]
')': [@8,342:342=')',<35>,15:26]
';': [@9,343:343=';',<39>,15:27]
'}': [@10,345:345='}',<37>,16:0]
